links for github, linkedin, and copy of resume were added. also adjusted spacing issues with footer in other pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,12 +38,12 @@ body {
 }
 
 /* #zero-box-pic */
-.box {
-  /* background: url(../images/nature1.jpg); */
-  /* background: url(../images/IMG_2185.jpg); */
-  /* background: url(../images/nature2.jpg); */
-  /* background-size: cover; */
-  /* background-size: contain; */
+/* .box {
+  background: url(../images/nature1.jpg);
+  background: url(../images/IMG_2185.jpg);
+  background: url(../images/nature2.jpg);
+  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   object-fit: cover;
 }
@@ -53,7 +53,7 @@ body {
   margin-left: 45%;
   margin-right: 50%;
 
-}
+} */
 
 #crystal-box {
   width: 80%;
@@ -200,6 +200,10 @@ h1 {
   /* width: 60px; */
 }
 
+#website-links{
+  margin-top: 45px;
+}
+
 
 /* header */
 
@@ -251,10 +255,14 @@ footer {
 
 /* main */
 #main-container {
-  padding-top: 40%;
-  /* padding-top: 30px; */
+  /* padding-top: 40%; */
+  padding-top: 30px;
+  padding-bottom: 10%;
 }
 
+#main-container-about{
+  padding-top: 40%;
+}
 /* portfolio page */
 
 .work {
